Fix dark mode font issue

--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -5,6 +5,7 @@ main {
   width: 100vw;
   height: 100vh;
   background-color: forestgreen;
+  color: black;
 }
 .game-board {
   box-sizing: border-box;
@@ -24,6 +25,7 @@ main {
   position: absolute;
   font-size: 20px;
   font-weight: bold;
+  color: black;
 }
 .bottom-left {
   bottom: 5px;
@@ -144,7 +146,7 @@ main {
 .player-scores {
   position: absolute;
   top: 10px;
-  left: 10px;
+  right: 10px;
 
   /* styling */
   border: 1px solid black;
@@ -169,7 +171,7 @@ main {
 .game-log {
   position: absolute;
   top: 110px;
-  left: 10px;
+  right: 10px;
 
   width: 375px;
   height: 75vh;
